# finance-challenge-fluxo

./: .gitattributes  .gitignore  README.md  db.sql
fluxo-db-stable/: package-lock.json  package.json
fluxo-db-stable/.github/workflows/: main_fluxo-test-api.yml
fluxo-db-stable/prisma/: schema.prisma
fluxo-db-stable/prisma/migrations/20241024204150_test/: migration.sql
fluxo-db-stable/prisma/migrations/20241102173429_test/: migration.sql
fluxo-db-stable/src/: index.ts
fluxo-db-stable/src/routes/: auth.ts  deleteSession.ts  deleteTransaction.ts  deposit.ts  editTransaction.ts  getSessionInfo.ts  newBudget.ts  send.ts  session.ts  withdraw.ts
fluxo/fluxo/: CMakeLists.txt  GetStartedPage.qml  Main.qml  authPage.qml  fluxo.cpp  fluxo.h  main.cpp  mainOperations.cpp  mainOperations.h  resources.qrc  session.cpp  session.h  urls.h  withdrawAmount.qml
fluxoapp/: Application.qml  AuthPage.qml  BudgetAmount.qml  BudgetBlock.qml  BudgetCreateMenuPage.qml  BudgetData.qml  BudgetEdit.qml  BudgetMainMenu.qml  CMakeLists.txt  CursorRectangle.qml  DepositAmount.qml  DepositCategory.qml  Expenses.qml  GetStartedPage.qml  Header.qml  Main.qml  MainPage.qml  MenuPage.qml  Navbar.qml  NewPageHideAnimation.qml  NewPageShowAnimation.qml  NewScreenAnimation.qml  PrivacyPolicy.qml  Receives.qml  SendMoney.qml  Statistics.qml  TransactionBlock.qml  TransactionsPage.qml  WithdrawAmount.qml  WithdrawCategory.qml  authPage.qml  budget.h  budgetAmount.qml  depositAmount.qml  depositCategory.qml  fluxo.cpp  fluxo.h  main.cpp  mainOperations.cpp  mainOperations.h  (+10 more)
fluxowebapp/: index.html  package-lock.json  package.json  tailwind.config.js
fluxowebapp/src/: Router.tsx  index.css
fluxowebapp/src/components/: logo.tsx
fluxowebapp/src/components/layouts/: AppLayout.tsx  Footer.tsx  Header.tsx
fluxowebapp/src/config/: app.ts  menu.ts
fluxowebapp/src/pages/: Dashboard.tsx  Empty.tsx  Home.tsx  Login.tsx  Register.tsx  Sample.tsx  Transactions.tsx
